[tool.poetry]
name = "repl_python3_ArtBot"
version = "0.1.0"
description = ""
authors = ["pinecone1984 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pandas = "^1.3.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
